Fix MinVer version determination by specifying current directory

--- a/.github/workflows/build-version.yml
+++ b/.github/workflows/build-version.yml
@@ -53,7 +53,7 @@ jobs:
         run: |
           dotnet tool install --global minver-cli
           export PATH="$PATH:$HOME/.dotnet/tools"
-          VERSION=$(minver -t v -d)
+          VERSION=$(minver -t v -d .)
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Pack NuGet package
