Fix versioning in build and pack steps to use static version 0.0.1

--- a/.github/workflows/build-version.yml
+++ b/.github/workflows/build-version.yml
@@ -64,14 +64,14 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build *.Library -c Release --no-restore -o output /p:Version=${{ steps.set-version.outputs.version }}
+        run: dotnet build *.Library -c Release --no-restore -o output /p:Version=0.0.1
 
       - name: Test
         run: |
           dotnet test *.Test -c Release --no-build --settings coverlet.runsettings --logger "trx;LogFileName=unit_tests.xml" --collect:"XPlat Code Coverage" -o output /p:Version=${{ steps.set-version.outputs.version }} || echo "There were failing tests!"
 
       - name: Pack NuGet package
-        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=${{ steps.set-version.outputs.version }}
+        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=0.0.1
 
       - name: Publish NuGet package to GitHub Packages
         if: startsWith(github.ref, 'refs/heads/release-') || github.ref == 'refs/heads/main'
