--- a/.github/workflows/build-version.yml
+++ b/.github/workflows/build-version.yml
@@ -64,14 +64,15 @@ jobs:
         run: dotnet restore
 
       - name: Build
-        run: dotnet build *.Library -c Release --no-restore -o output /p:Version=0.0.1
+        run: dotnet build DotNetLibrary.Library/DotNetLibrary.Library.csproj -c Release --no-restore -o output /p:Version=${{ steps.set-version.outputs.version }}
+        working-directory: ${{ github.workspace }}
 
       - name: Test
         run: |
           dotnet test *.Test -c Release --no-build --settings coverlet.runsettings --logger "trx;LogFileName=unit_tests.xml" --collect:"XPlat Code Coverage" -o output /p:Version=${{ steps.set-version.outputs.version }} || echo "There were failing tests!"
 
       - name: Pack NuGet package
-        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=0.0.1
+        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=${{ steps.set-version.outputs.version }}
 
       - name: Publish NuGet package to GitHub Packages
         if: startsWith(github.ref, 'refs/heads/release-') || github.ref == 'refs/heads/main'
@@ -100,3 +101,6 @@ jobs:
           git config user.email "github-actions@github.com"
           git tag ${{ steps.set-version.outputs.version }}
           git push origin ${{ steps.set-version.outputs.version }}
+
+      - name: List .git directory
+        run: ls -la .git
