Remove MinVer package reference and update build/test/pack steps to eliminate MinVerSkip parameter

--- a/.github/workflows/build-version.yml
+++ b/.github/workflows/build-version.yml
@@ -70,14 +70,14 @@ jobs:
         run: ls -la .git
 
       - name: Build
-        run: dotnet build DotNetLibrary.Library/DotNetLibrary.Library.csproj -c Release --no-restore -o output /p:Version=${{ steps.set-version.outputs.version }} /p:MinVerSkip=true
+        run: dotnet build DotNetLibrary.Library/DotNetLibrary.Library.csproj -c Release --no-restore -o output /p:Version=${{ steps.set-version.outputs.version }}
 
       - name: Test
         run: |
-          dotnet test *.Test -c Release --no-build --settings coverlet.runsettings --logger "trx;LogFileName=unit_tests.xml" --collect:"XPlat Code Coverage" -o output /p:Version=${{ steps.set-version.outputs.version }} /p:MinVerSkip=true || echo "There were failing tests!"
+          dotnet test *.Test -c Release --no-build --settings coverlet.runsettings --logger "trx;LogFileName=unit_tests.xml" --collect:"XPlat Code Coverage" -o output /p:Version=${{ steps.set-version.outputs.version }} || echo "There were failing tests!"
 
       - name: Pack NuGet package
-        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=${{ steps.set-version.outputs.version }} /p:MinVerSkip=true
+        run: dotnet pack *.Library -c Release -o output /p:PackageId=${PACKAGENAME_CAMELCASE} /p:Version=${{ steps.set-version.outputs.version }}
 
       - name: Publish NuGet package to GitHub Packages
         if: startsWith(github.ref, 'refs/heads/release-') || github.ref == 'refs/heads/main'
