Re-add MinVer package reference to project file for versioning support

--- a/DotNetLibrary.Library/DotNetLibrary.Library.csproj
+++ b/DotNetLibrary.Library/DotNetLibrary.Library.csproj
@@ -10,5 +10,9 @@
     </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MinVer" Version="6.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 </Project>
